--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/fs-extra": "^11.0.4",
     "axios": "^1.6.7",
     "cheerio": "1.0.0-rc.12",
     "debug": "^4.3.4",
+    "fs-extra": "^11.2.0",
     "module-alias": "^2.2.3",
     "mysql2": "^3.9.2",
     "node-fetch": "^2.7.0",
